<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.prod.usuario.pikers.LoginActivity"
    android:background="@color/colorPrimary"
    android:fitsSystemWindows="true">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="1">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.6">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title"
                android:textSize="40sp"
                android:layout_centerInParent="true"
                android:textColor="@color/colorAccent"
                android:textStyle="bold"
                />
        </RelativeLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.4"
            android:fillViewport="true">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="35dp">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/editTextWhite">
                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/userNameEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/username"/>
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/editTextWhite">
                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/passwordEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/password"/>
                </android.support.design.widget.TextInputLayout>
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/loginButton"
                    android:text="@string/login"
                    android:theme="@style/RaisedButtonDark"/>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/dontHaveAccount"
                        android:text="@string/no_ten_s_cuenta"
                        android:textStyle="bold"
                        android:textSize="16sp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/createHere"
                        android:text="@string/crea_una_aqu"
                        android:textStyle="bold"
                        android:textSize="16sp"
                        android:layout_marginLeft="5dp"
                        android:layout_toRightOf="@+id/dontHaveAccount"
                        android:layout_toEndOf="@+id/dontHaveAccount"
                        android:layout_marginStart="5dp" />
                </RelativeLayout>
            </LinearLayout>

        </ScrollView>



    </LinearLayout>



</android.support.design.widget.CoordinatorLayout>
