<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.prod.usuario.pikers.view.CreateAccountActivity"
    android:background="@color/editTextColorWhite"
    android:fitsSystemWindows="true">

    <include layout="@layout/actionbar_toolbar"></include>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/editTextBlack">
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/emailEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    android:layout_marginTop="10dp"
                    android:textColorHint="@color/editTextColorBlack"
                    />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/editTextBlack">
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/nameEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/name"
                    android:layout_marginTop="10dp"
                    android:textColorHint="@color/editTextColorBlack"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/editTextBlack">
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/userNameEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/username"
                    android:layout_marginTop="10dp"
                    android:textColorHint="@color/editTextColorBlack"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/editTextBlack">
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/passwordfirstEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:layout_marginTop="10dp"
                    android:textColorHint="@color/editTextColorBlack"/>
            </android.support.design.widget.TextInputLayout>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/JoinUsButton"
                android:text="@string/crear_cuenta"
                android:theme="@style/RaisedButtonDark"
                android:layout_marginTop="20dp"/>

        </LinearLayout>

    </ScrollView>

</android.support.design.widget.CoordinatorLayout>
